* ItemKind add param 'dbcol'
